--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,13 @@ body {
   font-family: Raleway, sans-serif;
 }
 
+/* TODO: уберу потом */
+.main,
+.header,
+.footer {
+  background-color: rgba(255, 0, 255, 0.2);
+}
+
 h1,
 h2,
 h3,
