--- a/styles/global.css
+++ b/styles/global.css
@@ -11,11 +11,11 @@ body {
 }
 
 /* TODO: уберу потом */
-.main,
+/* .main,
 .header,
 .footer {
   background-color: rgba(255, 0, 255, 0.2);
-}
+} */
 
 h1,
 h2,
