--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: Raleway;
-  src:
-    url(./Raleway-Regular.woff2) format('woff2'),
+  src: url(./Raleway-Regular.woff2) format('woff2'),
     url(./Raleway-Regular.woff) format('woff');
   font-weight: normal;
   font-display: swap;
@@ -9,8 +8,7 @@
 
 @font-face {
   font-family: Raleway;
-  src:
-    url(./Raleway-Bold.woff2) format('woff2'),
+  src: url(./Raleway-Bold.woff2) format('woff2'),
     url(./Raleway-Bold.woff) format('woff');
   font-weight: bold;
   font-display: swap;
