--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,7 @@
 /* Cover Styles Start */
 
 .cover {
+  position: relative;
   height: 757px;
   background-image: url(../images/cover.jpg);
   background-size: cover;
@@ -64,9 +65,7 @@
 
 .overlay {
   position: absolute;
-  width: 1100px;
-  height: 757px;
-  pointer-events: none;
+  inset: 0;
   background-color: rgb(0, 0, 0, 0.6);
 }
 
@@ -77,6 +76,7 @@
   padding: 160px 20px 135px 50px;
   line-height: 1.26;
   width: 100%;
+  z-index: 1;
 }
 
 .aligned-text {
