--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
   align-items: center;
 
   padding: 92px 24px 92px;
-  width: 1100px;
 }
 
 .header__links-list {
@@ -147,7 +146,7 @@
 /* Lots Styles Start */
 
 .lots {
-  padding-top: 179px;
+  padding: 179px 24px 0;
 }
 
 .lots__heading {
@@ -156,7 +155,7 @@
   line-height: 46.96px;
   text-align: left;
   text-transform: uppercase;
-  padding: 0 0 27px 64px;
+  padding: 0 0 27px 40px;
 }
 
 .lots__card-list {
@@ -165,7 +164,6 @@
   display: flex;
   gap: 25px;
   justify-content: center;
-  padding: 0 24px;
 }
 
 .lots__card-list-item {
@@ -222,10 +220,51 @@
 
 .lots__look-more-link {
   display: flex;
-  padding: 30px 64px;
+  padding: 30px 40px;
   font-size: 20px;
   font-weight: 400;
   line-height: 23.48px;
   text-underline-offset: 5px;
   text-decoration-thickness: 0.5px;
+}
+
+.about {
+  padding: 146px 24px 0;
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: 1fr;
+}
+
+.about__column {
+  padding: 8px 25px;
+}
+
+.about__logo {
+  background: #000;
+  display: flex;
+  width: 240px;
+  height: 240px;
+  margin: auto;
+  border-radius: 50%;
+}
+
+.about__logo-image {
+  margin: auto;
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  padding: 102px 0 98px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.01em;
 }
