--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@
   gap: 34px;
   list-style: circle;
   font-size: 18px;
-  line-height: 24px;
 }
 
 .header__links-list-item {
@@ -50,7 +49,7 @@
   font-family: Raleway;
   font-size: 18px;
   font-weight: 400;
-  line-height: 24.3px;
+  line-height: 1.34em;
   letter-spacing: 0.0035em;
 }
 
@@ -60,7 +59,7 @@
 
 .cover {
   position: relative;
-  height: 757px;
+  padding: 0 0 51px 0;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-position: center;
@@ -80,7 +79,6 @@
   align-items: center;
   justify-content: center;
   padding: 160px 20px 135px 50px;
-  line-height: 1.26;
   width: 100%;
   z-index: 1;
 }
@@ -89,6 +87,7 @@
   display: flex;
   flex-wrap: wrap;
   font-size: 100px;
+  line-height: 1.26em;
   text-transform: uppercase;
   letter-spacing: 30px;
 }
@@ -122,7 +121,7 @@
 
 .cover__description-text {
   font-size: 22px;
-  line-height: 28px;
+  line-height: 1.27em;
   font-weight: 100;
   text-transform: uppercase;
   padding-left: 28px;
@@ -154,7 +153,7 @@
 .lots__heading {
   font-size: 40px;
   font-weight: 700;
-  line-height: 46.96px;
+  line-height: 1.175em;
   text-align: left;
   text-transform: uppercase;
   padding: 0 0 27px 40px;
@@ -171,7 +170,7 @@
 .lots__card-list-item {
   flex-grow: 1;
   width: 100%;
-  height: 563px;
+  min-height: 560px;
 }
 
 .card-link {
@@ -206,7 +205,7 @@
 .card__title {
   font-size: 22px;
   font-weight: 700;
-  line-height: 26.4px;
+  line-height: 1.182em;
   text-transform: uppercase;
   text-decoration: underline;
   text-decoration-line: underline;
@@ -217,18 +216,22 @@
 .card__text {
   font-size: 20px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.2em;
 }
 
 .lots__look-more-link {
   display: flex;
-  padding: 30px 40px;
+  padding: 31px 40px 28px 40px;
   font-size: 20px;
   font-weight: 400;
-  line-height: 23.48px;
+  line-height: 1.15em;
   text-underline-offset: 5px;
   text-decoration-thickness: 0.5px;
 }
+
+/* Lots Styles End */
+/*-*/
+/* About Styles Start */
 
 .about {
   padding: 146px 24px 0;
@@ -252,24 +255,27 @@
 
 .about__logo-image {
   margin: auto;
-  width: 148px;
-  height: 114px;
+  height: 113px;
 }
 
 .about__title {
   padding: 102px 0 98px;
   font-size: 40px;
   font-weight: 700;
-  line-height: 46.96px;
+  line-height: 1.174em;
   text-transform: uppercase;
 }
 
 .about__text {
   font-size: 20px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.2em;
   letter-spacing: 0.01em;
 }
+
+/* About Styles End */
+/*-*/
+/* Footer Styles Start */
 
 .footer {
   padding: 150px 50px 86px;
@@ -284,7 +290,7 @@
   text-align: center;
   font-size: 18px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 1.167em;
 }
 
 .footer__menu-link {
