--- a/styles/style.css
+++ b/styles/style.css
@@ -41,16 +41,19 @@
 }
 
 .address-list {
-  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
 }
 
 .address-list-item {
   text-underline-offset: 4px;
-  font-family: Raleway;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.34em;
   letter-spacing: 0.0035em;
+  font-style: normal;
+  width: 100%;
 }
 
 /* Header Styles End */
