--- a/styles/style.css
+++ b/styles/style.css
@@ -233,14 +233,14 @@
 /* About Styles Start */
 
 .about {
-  padding: 146px 24px 0;
+  padding: 146px 24px 2px;
   display: grid;
   grid-template-columns: 334px 1fr;
   grid-template-rows: 1fr;
 }
 
 .about__column {
-  padding: 8px 25px;
+  padding: 8px 25px 0;
 }
 
 .about__logo {
@@ -254,7 +254,7 @@
 
 .about__logo-image {
   margin: auto;
-  height: 113px;
+  height: 114px;
 }
 
 .about__title {
@@ -266,10 +266,12 @@
 }
 
 .about__text {
-  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
   font-weight: 400;
   line-height: 1.2em;
-  letter-spacing: 0.01em;
+  font-size: 20px;
 }
 
 /* About Styles End */
@@ -277,7 +279,7 @@
 /* Footer Styles Start */
 
 .footer {
-  padding: 150px 50px 86px;
+  padding: 180px 50px 86px;
   display: grid;
   grid: 1fr / 1fr 1fr 1fr;
   width: 100%;
