поправил шрифт в button

--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,7 @@
 .bet-button {
   background-color: transparent;
   color: white;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-weight: 500;
   line-height: 0.6em;
